# grape-and-pear

./: .gitignore  Containerfile.grape-and-pear  Makefile  README.md  pyproject.toml
k8s/base/: 01-namespace.yml  02-deployment.yml  03-network.yml
k8s/bases/: 01-serviceaccount.yml  02-config.yml  03-deployment.yml
k8s/overlays/nginx-ingress/: ingress.yml
src/grape_and_pear/: main.py
